feat:在数据库容器启动时初始化sql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,4 @@ services:
       MYSQL_ROOT_PASSWORD: example
     volumes:
       - './volumes/mysql:/var/lib/mysql'
+      - './scripts:/docker-entrypoint-initdb.d/'
